--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.2.4",
     "node-fetch": "^3.3.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "eslint": "^8",
