--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "date-fns": "^3.6.0",
     "lru-cache": "^11.0.0",
     "next": "^14.2.4",
     "node-fetch": "^3.3.2",
-    "react": "^18",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
