"Updated layout.js, page.js, and PropertiesClient.js with minor changes; added @badrap/bar-of-progress dependency to package.json and package-lock.json"

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.1.4",
     "date-fns": "^3.6.0",
     "lru-cache": "^11.0.0",
